<resources>
    <string name="app_name">これ覚えておきたいねん</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mysize">My Size</string>

    <string name="home_second">Home Second</string>


    <string name="app_short_name">Never Forget</string>
    <string name="title_mysize">体のサイズ</string>
    <string name="title_property">持ち物</string>
    <string name="title_memorial">記念日</string>
    <string name="neck">首回り</string>
    <string name="sleeve">そで丈</string>
    <string name="waist">胴回り</string>
    <string name="inside_leg">股下</string>
    <string name="car_number">車のナンバー</string>
    <string name="phone_number">携帯番号</string>
    <string name="wedding">結婚記念日</string>
    <string name="birthday">妻の誕生日</string>
    <string name="birthday1">子供の誕生日1</string>
    <string name="birthday2">子供の誕生日2</string>
    <string name="birthday3">子供の誕生日3</string>
</resources>
